--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "chart.js": "^4.4.8",
     "firebase": "^11.8.1",
     "lucide-react": "^0.546.0",
-    "next": "15.2.3",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "suncalc": "^1.9.0",
+    "suncalc3": "^2.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/suncalc": "^1.9.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
